# freq-data-plane

./: .gitignore  Cargo.toml  compose.yml  fly.toml
clients/typescript/: index.ts
crates/data-db/: Cargo.toml
crates/data-db/examples/: basic.rs
crates/data-db/src/: lib.rs
crates/data-db/src/control_api/: asset.rs  audit.rs  binding.rs  database.rs  delivery.rs  mapping.rs  migration.rs  mod.rs  policy.rs  principal.rs  secret.rs  session.rs  tenant.rs  tests.rs
crates/data-sdk/: Cargo.toml
crates/data-sdk/src/: lib.rs
crates/freq-data-plane/: Cargo.toml
crates/freq-data-plane/src/: error.rs  extractors.rs  main.rs  state.rs
crates/freq-data-plane/src/routes/: assets.rs  audit.rs  bindings.rs  databases.rs  deliveries.rs  delivery_channels.rs  health.rs  mappings.rs  mod.rs  pages.rs  policies.rs  principals.rs  roles.rs  secrets.rs  sessions.rs  tenant.rs  tokens.rs
crates/freq-data-plane/templates/: control_plane.html  dashboard.html  login.html  login_failed.html
crates/user-database/: Cargo.toml
crates/user-database/src/: lib.rs
example-apps/notes-api/: deno.json  e2e.sh  freq.toml  main.ts  setup.ts
example-apps/notes-api/migrations/: v0.0.create_notes.sql  v0.1.add_tags.sql
migrations/duckdb-s3-datalake/v1/: v0.0-prototype.duckdb.sql
